--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,5 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %> | CSE340 App</title>
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="/css/small.css">
+    <link rel="stylesheet" href="/css/large.css">
+
 </head>
