--- a/public/css/large.css
+++ b/public/css/large.css
@@ -54,6 +54,12 @@ main {
   grid-column: 1/3;
   /* background-image: url('/images/vehicles/delorean.jpg'); */
 }
+div .hero-msg {
+  background-image: url("/images/vehicles/delorean.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
 
 .upgrade {
   grid-column: 1/2;
